# quantlab

./: .env.example  .gitattributes  .gitignore  .tmp_run.py  AAPL_equity.csv  AAPL_metrics.json  AAPL_signals.csv  AAPL_trades.csv  ABB.ST_equity.csv  ABB.ST_metrics.json  ABB.ST_signals.csv  ABB.ST_trades.csv  MSFT_equity.csv  MSFT_metrics.json  MSFT_signals.csv  MSFT_trades.csv  Mappstruktur  PR8_1_DESCRIPTION.md  Quantlab Hotlists Watch.xml  README-ml.md  README.md  REPO_HYGIENE_REPORT.md  VOLV-B.ST_equity.csv  VOLV-B.ST_metrics.json  VOLV-B.ST_signals.csv  VOLV-B.ST_trades.csv  _test_import.py  cli.py  cli_live.py  fundamentals_ingest.py  index.html  pyproject.toml  requirements.txt  run_hotlists.bat  streamlit_app.py  watchlist.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
alerts/: slack.py  telegram.py
app/: alerts_service.py  assistant.py  config.py  db.py  fundamentals_service.py  fundamentals_tasks.py  main.py  models.py  scheduler.py  services.py
config/: DSL (YAML)  settings.yml  ticker_index_map.yml  tickers.txt  tickers_intraday_se.txt  tickers_intraday_us.txt  watchlist.yml
data/: .gitkeep
docs/: APP_WALKTHROUGH_REPORT.md  CHARTSPRO_TVUI_KANBAN.md  CHARTSPRO_TVUI_SPRINT_PLAN.md  FILE_INDEX.md  INDICATOR_BACKLOG.md  INDICATOR_PARITY_MATRIX.md  LLM.md  LLM_TASKS.md  PR8_FINAL.md  PR8_MONITORING_CHECKLIST.md  PR_PLAN.md  WORKFLOWS_AUDIT_REPORT.md
engine/: backtest.py  backtest2.py  calendar.py  features.py  indicator_adapters.py  ingest.py  metrics.py  optimize.py  resample.py  rules.py  strategy.py  walkforward.py
pages/: 01_Hot_Lists.py  02_Breadth.py  ABB.ST_optuna_best.json  ABB.ST_optuna_trials.csv
quantlab-ui/: SPRINT_TV3_STEG1C_VERIFICATION.md  build_output.txt  chartspro-test-final.txt  chartspro-test-headed-output.txt  (+18 more)
(+590 files in other folders)
