[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.0.1"
description = "Quant toolkit"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantkit*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src/quantkit/data", "src/quantkit/cli_data.py"]
ignore = ["E401","E701","E702","E741","F401","F811","F841"]

[tool.mypy]
ignore_errors = true
